[gd_scene load_steps=7 format=3 uid="uid://b8moix3bv57uf"]

[ext_resource type="ArrayMesh" uid="uid://borrfbdagja3t" path="res://assets/models/book.res" id="1_kh36y"]
[ext_resource type="Script" uid="uid://bi17j4o0kdqlr" path="res://desk_itens/book.gd" id="2_y0hms"]
[ext_resource type="Theme" uid="uid://dfgj2usx5hjn6" path="res://themes/ui.tres" id="3_xbbjk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_y0hms"]
size = Vector3(0.00186557, 0.00515747, 0.00858307)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1g4d8"]
bg_color = Color(0.957709, 0.881172, 0.689056, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id="Theme_xbbjk"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_1g4d8")

[node name="Book" type="Node3D"]
script = ExtResource("2_y0hms")

[node name="BookMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(5.36176e-05, -1109.21, 457.884, -1198.85, 20.0444, 48.557, -52.5316, -457.445, -1108.14, 0, 0, 0)
mesh = ExtResource("1_kh36y")

[node name="StaticBody3D" type="StaticBody3D" parent="BookMesh"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BookMesh/StaticBody3D"]
transform = Transform3D(1, -8.34465e-07, -3.12179e-06, 3.72529e-09, 1, 8.34465e-07, 7.45058e-09, 7.00355e-06, 1, -6.00641e-05, 6.49787e-05, -0.000243225)
shape = SubResource("BoxShape3D_y0hms")

[node name="ItemInfo" type="CanvasLayer" parent="."]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="ItemInfo"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_xbbjk")

[node name="MarginContainer" type="MarginContainer" parent="ItemInfo/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="ItemInfo/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Topbar" type="HBoxContainer" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/Topbar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme = ExtResource("3_xbbjk")
text = "BACK"

[node name="BookContainer" type="VBoxContainer" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="TabBar" type="HBoxContainer" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/TabBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/TabBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="Page1Button" type="Button" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/TabBar/ButtonsContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_xbbjk")
toggle_mode = true
button_pressed = true
text = "Página 1"

[node name="Page2Button" type="Button" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/TabBar/ButtonsContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_xbbjk")
toggle_mode = true
text = "Página 2"

[node name="Page3Button" type="Button" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/TabBar/ButtonsContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_xbbjk")
toggle_mode = true
text = "Página 3"

[node name="Control2" type="Control" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/TabBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PagesContainer" type="MarginContainer" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 12

[node name="Page1" type="PanelContainer" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/PagesContainer"]
layout_mode = 2
theme = SubResource("Theme_xbbjk")

[node name="MarginContainer" type="MarginContainer" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/PagesContainer/Page1"]
layout_mode = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 26
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 26

[node name="VBoxContainer" type="VBoxContainer" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/PagesContainer/Page1/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/PagesContainer/Page1/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xbbjk")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Título da página 1"

[node name="Page2" type="PanelContainer" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/PagesContainer"]
visible = false
layout_mode = 2
theme = SubResource("Theme_xbbjk")

[node name="MarginContainer" type="MarginContainer" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/PagesContainer/Page2"]
layout_mode = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 26
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 26

[node name="VBoxContainer" type="VBoxContainer" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/PagesContainer/Page2/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/PagesContainer/Page2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xbbjk")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Título da página 2"

[node name="Page3" type="PanelContainer" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/PagesContainer"]
visible = false
layout_mode = 2
theme = SubResource("Theme_xbbjk")

[node name="MarginContainer" type="MarginContainer" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/PagesContainer/Page3"]
layout_mode = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 26
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 26

[node name="VBoxContainer" type="VBoxContainer" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/PagesContainer/Page3/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/BookContainer/PagesContainer/Page3/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xbbjk")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Título da página 3"

[connection signal="input_event" from="BookMesh/StaticBody3D" to="." method="_on_static_body_3d_input_event"]
[connection signal="pressed" from="ItemInfo/PanelContainer/MarginContainer/VBoxContainer/Topbar/Back" to="." method="_on_back_pressed"]
